tests/macro_tests/tests/fail/field_no_from_field.stderr
error[E0277]: the trait bound `OtherType: FromMultipartField` is not satisfied
 --> tests/fail/field_no_from_field.rs:3:10
  |
3 | #[derive(FromMultipart)]
  |          ^^^^^^^^^^^^^ the trait `FromMultipartField` is not implemented for `OtherType`
  |
  = help: the following other types implement trait `FromMultipartField`:
            &'a PhantomData<T>
            ()
            (K, V)
            Arc<T>
            AtomicBool
            AtomicI16
            AtomicI32
            AtomicI64
          and $N others
  = note: required for `OtherType` to implement `FromMultipart`
  = note: this error originates in the derive macro `FromMultipart` (in Nightly builds, run with -Z macro-backtrace for more info)
